--- a/CyclingMaster/app/src/main/res/layout/activity_login.xml
+++ b/CyclingMaster/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content">
 
                 <EditText android:id="@+id/email_login" android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
+                    android:layout_height="wrap_content" android:hint="Email"
                     android:imeActionId="@+id/login"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
