--- a/CyclingMaster/app/src/main/res/layout/tab_leaderboard.xml
+++ b/CyclingMaster/app/src/main/res/layout/tab_leaderboard.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#ffffff" >
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:id="@android:id/text1"
+        android:text="Weekly Ranking"
+        android:textSize="15dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Leaderboard"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
+        android:paddingLeft="15dp">
+    </TextView>
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="468dp" >
+    </ListView>
+
+    <TextView
+        android:id="@android:id/empty"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </TextView>
+
 </LinearLayout>
