--- a/CyclingMaster/app/src/main/res/layout/list_item.xml
+++ b/CyclingMaster/app/src/main/res/layout/list_item.xml
@@ -5,13 +5,27 @@
     android:paddingLeft="8dp"
     android:paddingRight="8dp" >
 
+    <TextView
+        android:id="@+id/rank"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/member_name"
+        android:layout_alignBottom="@+id/member_name"
+        android:text="txt"
+        android:textSize="17sp"
+        android:textStyle="bold"/>
+
     <ImageView
         android:id="@+id/profile_pic"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:contentDescription="desc"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp" />
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/rank"
+        android:layout_toEndOf="@+id/rank"
+        android:layout_marginLeft="30dp"/>
 
     <TextView
         android:id="@+id/member_name"
@@ -25,7 +39,7 @@
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/status"
+        android:id="@+id/totalride"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/member_name"
@@ -35,7 +49,7 @@
         android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/contact_type"
+        android:id="@+id/xp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/member_name"
@@ -44,5 +58,13 @@
         android:text="txt"
         android:layout_marginLeft="7dp"
         android:textSize="16sp" />
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/badge"
+        android:layout_alignTop="@+id/member_name"
+        android:layout_toLeftOf="@+id/xp"
+        android:layout_toStartOf="@+id/xp" />
 
 </RelativeLayout>
