--- a/CyclingMaster/app/src/main/res/layout/tab_leaderboard.xml
+++ b/CyclingMaster/app/src/main/res/layout/tab_leaderboard.xml
@@ -7,11 +7,45 @@
     <TextView
         android:id="@android:id/text1"
         android:text="Weekly Ranking"
-        android:textSize="15dp"
+        android:textSize="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="15dp">
+        android:paddingLeft="115dp"
+        android:textStyle="bold">
     </TextView>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="25dp"
+    android:weightSum="1">
+    <TextView
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Rank"
+        android:id="@+id/textView8"
+        android:layout_marginLeft="8dp"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Player"
+        android:id="@+id/textView9"
+        android:layout_marginLeft="50dp"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="XP"
+        android:id="@+id/textView10"
+        android:layout_gravity="right"
+        android:layout_weight="0.04"
+        android:textStyle="bold"
+        android:layout_marginLeft="140dp"/>
+</LinearLayout>
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
